--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                         <!-- Category buttons will be loaded here -->
                     </div>
                     <div class="relative w-full md:w-auto md:min-w-[250px]">
-                         <input type="text" id="library-search" placeholder="Filter by keyword..." class="w-full pl-10 pr-4 py-2 text-sm bg-gray-100 border border-gray-300 rounded-lg focus:ring-1 focus:ring-hkust-blue focus:border-hkust-blue outline-none">
+                         <input type="text" id="library-search" placeholder="Search by keyword..." class="w-full pl-10 pr-4 py-2 text-sm bg-gray-100 border border-gray-300 rounded-lg focus:ring-1 focus:ring-hkust-blue focus:border-hkust-blue outline-none">
                          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="absolute left-3 top-1/2 -translate-y-1/2 text-gray-400"><circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg>
                     </div>
                 </div>
